# WeYoutube

./: .gitignore  MANIFEST.in  README.md  fix-requirements.txt  main.py  requirements.in  requirements.txt  setup.cfg  setup.py  versioneer.py
Weyoutube/: __init__.py  _version.py  config.py  models.py
Weyoutube/cinema/: __init__.py  routes.py
Weyoutube/cinema/static/cinema/: form_action.js  watch_as_guest.js  watch_as_owner.js
Weyoutube/cinema/templates/cinema/: index.html  watch.html
Weyoutube/templates/: base.html
instance/: dev.cfg
