# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.


[metadata]
name = weyoutube
version = 0.0.1

[versioneer]
VCS = git
style = pep440-xzp
versionfile_source = Weyoutube/_version.py
versionfile_build = Weyoutube/_version.py
tag_prefix =
parentdir_prefix = Weyoutube

